// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render colon when using colon prop 1`] = `
<form class="r-form">
  <div class="r-cell r-input">
    <div class="r-cell__title r-input__label">
      <label id="r-input-label"
             for="r-input-input"
      >
        Label:
      </label>
    </div>
    <div class="r-cell__value r-input__value">
      <div class="r-input__body">
        <input type="text"
               id="r-input-input"
               class="r-input__control"
               aria-labelledby="r-input-label"
        >
      </div>
    </div>
  </div>
  <div class="r-cell r-input">
    <div class="r-cell__title r-input__label">
      Custom Label:
    </div>
    <div class="r-cell__value r-input__value">
      <div class="r-input__body">
        <input type="text"
               id="r-input-input"
               class="r-input__control"
        >
      </div>
    </div>
  </div>
</form>
`;

exports[`should render error-message-align prop correctly 1`] = `
<form class="r-form">
  <div class="r-cell r-input">
    <div class="r-cell__value r-input__value">
      <div class="r-input__body">
        <input type="text"
               id="r-input-input"
               class="r-input__control"
        >
      </div>
      <div class="r-input__error-message r-input__error-message--right">
        Error
      </div>
    </div>
  </div>
</form>
`;

exports[`should render input-align prop correctly 1`] = `
<form class="r-form">
  <div class="r-cell r-input">
    <div class="r-cell__value r-input__value">
      <div class="r-input__body">
        <input type="text"
               id="r-input-input"
               class="r-input__control r-input__control--right"
        >
      </div>
    </div>
  </div>
  <div class="r-cell r-input">
    <div class="r-cell__value r-input__value">
      <div class="r-input__body">
        <div class="r-input__control r-input__control--right r-input__control--custom">
          <div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`should render label-align prop correctly 1`] = `
<form class="r-form">
  <div class="r-cell r-input r-input--label-right">
    <div class="r-cell__title r-input__label r-input__label--right">
      <label id="r-input-label"
             for="r-input-input"
      >
        Label
      </label>
    </div>
    <div class="r-cell__value r-input__value">
      <div class="r-input__body">
        <input type="text"
               id="r-input-input"
               class="r-input__control"
               aria-labelledby="r-input-label"
        >
      </div>
    </div>
  </div>
  <div class="r-cell r-input r-input--label-center">
    <div class="r-cell__title r-input__label r-input__label--center">
      <label id="r-input-label"
             for="r-input-input"
      >
        Label
      </label>
    </div>
    <div class="r-cell__value r-input__value">
      <div class="r-input__body">
        <input type="text"
               id="r-input-input"
               class="r-input__control"
               aria-labelledby="r-input-label"
        >
      </div>
    </div>
  </div>
</form>
`;

exports[`should render label-width prop correctly 1`] = `
<form class="r-form">
  <div class="r-cell r-input">
    <div class="r-cell__title r-input__label"
         style="width: 5rem;"
    >
      <label id="r-input-label"
             for="r-input-input"
      >
        Label
      </label>
    </div>
    <div class="r-cell__value r-input__value">
      <div class="r-input__body">
        <input type="text"
               id="r-input-input"
               class="r-input__control"
               aria-labelledby="r-input-label"
        >
      </div>
    </div>
  </div>
  <div class="r-cell r-input">
    <div class="r-cell__title r-input__label"
         style="width: 10vw;"
    >
      <label id="r-input-label"
             for="r-input-input"
      >
        Label
      </label>
    </div>
    <div class="r-cell__value r-input__value">
      <div class="r-input__body">
        <input type="text"
               id="r-input-input"
               class="r-input__control"
               aria-labelledby="r-input-label"
        >
      </div>
    </div>
  </div>
</form>
`;

exports[`should validate first input when using validate-first prop 1`] = `
<form class="r-form">
  <div class="r-cell r-input">
    <div class="r-cell__value r-input__value">
      <div class="r-input__body">
        <input type="text"
               id="r-input-input"
               name="A"
               class="r-input__control"
        >
      </div>
      <div class="r-input__error-message">
        A failed
      </div>
    </div>
  </div>
  <div class="r-cell r-input">
    <div class="r-cell__value r-input__value">
      <div class="r-input__body">
        <input type="text"
               id="r-input-input"
               name="B"
               class="r-input__control"
        >
      </div>
    </div>
  </div>
</form>
`;
